                                     Xbox Media Center CHANGELOG
************************************************************************************************************* 
*************************************************************************************************************

added/fixed: (dd-mm-yyyy) (please specify date in CET)
 - 06-04-2006 fixed: [ 1458759 ] Little info screen problems
 - 06-04-2006 fixed: [ 1267265 ] Un-safe HD shutdown
 - 06-04-2006 fixed: [ 1454415 ] Philipps DVD Drive not recognized at System-Info
 - 05-04-2006 changed: use 16 byte aligned pointers in dvdplayer's libmpeg2, fixes potential crash on decoding (thou i doubt it ever happend)
 - 05-04-2006 changed: avoid closing audio device if properties didn't change, avoids ac3 reciever stuttering between audio tracks when using OTAS
 - 05-04-2006 fixed: Last.fm radio skip track.
 - 05-04-2006 changed: rss-reader useragent.
 - 05-04-2006 fixed: [ 1464756 ] script output scrolling crash
 - 05-04-2006 changed: The controls in SettingsCategory are added in the same position as their template controls.
 - 04-04-2006 fixed: single filed rar archives should be up to speed again.
 - 04-04-2006 fixed: [ 1461737 ] Navigation in CBR/CBZ.
 - 04-04-2006 fixed: [ 1460946 ] Unable to create CD rip dir on SMB share.
 - 04-04-2006 fixed: Karaoke transparency settings weren't honoured.
 - 04-04-2006 changed: Window.Previous(id) applies for the whole time a window is on screen, rather than just while the window is initializing.
 - 04-04-2006 fixed: Audio and subtitle delay via keymap.xml were not functioning.
 - 04-04-2006 fixed: UTF16->UTF8 conversion crash on some strings.
 - 04-04-2006 added: playlist field to SmartPlaylists.
 - 04-04-2006 fixed: Setting of currently playing item was set by index rather than path + startoffset in the media windows.
 - 04-04-2006 fixed: [ 1461096 ] Movie Trailers scrolling bug
 - 04-04-2006 fixed: [ 1461095 ] certain features frozen with xlink kai enabled